# dungeons-and-blocks

./: .gitignore  AGENTS.md  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package.json
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src/: main.ts
app/src/combat/: types.ts
app/src/content/: units.ts
app/src/dungeon/: generate.ts  tiles.ts
app/src/idl/: adventure_engine.json  dungeon_nft.json  hero_core.json  player_economy.json
app/src/scenes/: Combat.ts  EmbarkScene.ts  Game.ts  TownScene.ts
app/src/state/: adventureChain.ts  combatEvents.ts  combatIntegration.ts  dungeonChain.ts  economyChain.ts  heroChain.ts  heroStats.ts  inventory.ts  items.ts  loot.ts  models.ts  runState.ts  tempKeypair.ts  townStore.ts  traitCatalog.ts  types.ts
app/src/types/: adventure_engine.ts  dungeon_nft.ts  hero_core.ts  player_economy.ts
app/src/ui/: chestLootModal.ts  hudControls.ts  inventoryPanel.ts  lootModal.ts  stressPanel.ts  uiConfig.ts
docs/: GDD.MD
programs-ecs/systems/movement/: Cargo.toml
programs/adventure-engine/: Cargo.toml
programs/adventure-engine/src/: combat.rs  constants.rs  errors.rs  lib.rs  logic.rs  state.rs
programs/adventure-engine/src/instructions/: combat.rs  delegate.rs  exit.rs  items.rs  loot.rs  mod.rs  movement.rs  start.rs  support.rs
programs/dungeon-nft/: Cargo.toml
programs/dungeon-nft/src/: constants.rs  errors.rs  helpers.rs  lib.rs  logic.rs  state.rs
programs/dungeon-nft/src/instructions/: config.rs  mint.rs  mod.rs
programs/dungeons-and-blocks/: Cargo.toml
programs/dungeons-and-blocks/src/: lib.rs
programs/hero-core/: Cargo.toml
programs/hero-core/src/: lib.rs  (+5 more)
programs/player-economy/: Cargo.toml
programs/player-economy/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/player-economy/src/instructions/: economy.rs  items.rs  mod.rs
scripts/: hero-dev.js  init-dungeon-config.js  seeded-mint.js
tests/: dungeons-and-blocks.ts
(+29 files in other folders)
