[package]
name = "adventure-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = { version = "0.2.12", features = ["anchor"] }
dungeon-nft = { path = "../dungeon-nft", features = ["no-entrypoint"] }
hero-core = { path = "../hero-core", features = ["no-entrypoint", "cpi"] }
player-economy = { path = "../player-economy", features = ["no-entrypoint", "cpi"] }

[features]
default = []
anchor-debug = []
cpi = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
