[package]
name = "dungeon-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.31.1"
ephemeral-vrf-sdk = { version = "0.1.2", features = ["anchor"] }

[features]
no-entrypoint = []
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
