[package]
name = "dungeons-and-blocks"
version = "0.2.6"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.31.1"

[features]
no-entrypoint = []
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]