[package]
name = "player-economy"
version = "0.1.0"
description = "Shared gold and item economy program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "player_economy"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

[features]
default = []
anchor-debug = []
cpi = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
